# sesquicentennial-manifests

./: .gitignore  README.md  collections.json  pyproject.toml  sesquicentennial_images.csv  updated_data.csv
building_history/: .json  1889%20Assembly%20Hall.json  1889_Assembly_Hall.json  1923%20Assembly%20Hall.json  1923_Assembly_Hall.json  Academic%20Building.json  Academic_Building.json  Adams%20Band%20Hall.json  Adams_Band_Hall.json  Administration.json  Aggie%20Barn.json  Aggie_Barn.json  Aggieland%20Inn.json  Aggieland_Inn.json  Albritton%20Bell%20Tower.json  Albritton_Bell_Tower.json  All%20Faiths%20Chapel.json  All_Faiths_Chapel.json  Animal%20Industries%20Building.json  Animal_Industries_Building.json  Anthropology%20Building.json  Anthropology%2C%20Plant%20Sciences%20and%20Agricultural%20Economics%20Research%20Lab.json  Anthropology,_Plant_Sciences_and_Agricultural_Economics_Research_Lab.json  Anthropology_Building.json  Aston%20Hall.json  Aston_Hall.json  Austin%20Hall.json  Austin_Hall.json  Bachelor%20Hall%20and%20Buggy%20House.json  Bachelor_Hall_and_Buggy_House.json  Bagley%20Hall.json  Bagley_Hall.json  Barns.json  Beef%20Cattle%20Center.json  Beef_Cattle_Center.json  Bell%20Building.json  Bell_Building.json  Beutel%20Health%20Center.json  Beutel_Health_Center.json  Bioengineering%20Research%20Lab.json  (+286 more)
sesquicentennial_manifests/: __init__.py  colleciton.py  generate.py
sesquicentennial_manifests/manifest/: manifest.py
